# merge-ytm

./: .env.example  .gitignore  CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  code_review.md  docker-compose.yml  package-lock.json
.github/: FUNDING.yml
.github/workflows/: test.yml
.kiro/specs/merge-rebrand-refactor/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  fly.toml  pyproject.toml  pytest_errors.txt  render.yaml  requirements.txt  start.sh  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 4f6709c24153_initial.py  a1b2c3d4e5f6_add_auth_columns_to_neon_user.py  c0a39bc39e71_add_blendinvite_model.py
backend/app/: __init__.py  main.py  models.py  tasks.py
backend/app/api/: routes.py
backend/app/core/: auth_middleware.py  celery_app.py  config.py  rate_limiter.py  security.py
backend/app/db/: session.py
backend/app/schemas/: api.py
backend/app/services/: blend_engine.py  blend_service.py  feedback_service.py  normalization.py  ytmusic_client.py
backend/tests/: test_blend_engine.py  test_properties.py
backend/ytmusic_sync_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: instrumentation.ts
frontend/src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  auth-client.ts  auth.ts
frontend/src/store/: blend-store.ts
(+24 files in other folders)
